--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,197 @@ body {
   color: #191825;
 }
 
+.wrapper {
+  display: none;
+}
+
+.preloader {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
+@-webkit-keyframes ldio-uqmmxyvgo6 {
+  0% {
+    -webkit-transform: translate(12px, 80px) scale(0);
+            transform: translate(12px, 80px) scale(0);
+  }
+  25% {
+    -webkit-transform: translate(12px, 80px) scale(0);
+            transform: translate(12px, 80px) scale(0);
+  }
+  50% {
+    -webkit-transform: translate(12px, 80px) scale(1);
+            transform: translate(12px, 80px) scale(1);
+  }
+  75% {
+    -webkit-transform: translate(80px, 80px) scale(1);
+            transform: translate(80px, 80px) scale(1);
+  }
+  100% {
+    -webkit-transform: translate(148px, 80px) scale(1);
+            transform: translate(148px, 80px) scale(1);
+  }
+}
+
+@keyframes ldio-uqmmxyvgo6 {
+  0% {
+    -webkit-transform: translate(12px, 80px) scale(0);
+            transform: translate(12px, 80px) scale(0);
+  }
+  25% {
+    -webkit-transform: translate(12px, 80px) scale(0);
+            transform: translate(12px, 80px) scale(0);
+  }
+  50% {
+    -webkit-transform: translate(12px, 80px) scale(1);
+            transform: translate(12px, 80px) scale(1);
+  }
+  75% {
+    -webkit-transform: translate(80px, 80px) scale(1);
+            transform: translate(80px, 80px) scale(1);
+  }
+  100% {
+    -webkit-transform: translate(148px, 80px) scale(1);
+            transform: translate(148px, 80px) scale(1);
+  }
+}
+@-webkit-keyframes ldio-uqmmxyvgo6-r {
+  0% {
+    -webkit-transform: translate(148px, 80px) scale(1);
+            transform: translate(148px, 80px) scale(1);
+  }
+  100% {
+    -webkit-transform: translate(148px, 80px) scale(0);
+            transform: translate(148px, 80px) scale(0);
+  }
+}
+@keyframes ldio-uqmmxyvgo6-r {
+  0% {
+    -webkit-transform: translate(148px, 80px) scale(1);
+            transform: translate(148px, 80px) scale(1);
+  }
+  100% {
+    -webkit-transform: translate(148px, 80px) scale(0);
+            transform: translate(148px, 80px) scale(0);
+  }
+}
+@-webkit-keyframes ldio-uqmmxyvgo6-c {
+  0% {
+    background: #ff00e5;
+  }
+  25% {
+    background: #ff00e5;
+  }
+  50% {
+    background: #d855ff;
+  }
+  75% {
+    background: #9714fb;
+  }
+  100% {
+    background: #ff00e5;
+  }
+}
+@keyframes ldio-uqmmxyvgo6-c {
+  0% {
+    background: #ff00e5;
+  }
+  25% {
+    background: #ff00e5;
+  }
+  50% {
+    background: #d855ff;
+  }
+  75% {
+    background: #9714fb;
+  }
+  100% {
+    background: #ff00e5;
+  }
+}
+.ldio-uqmmxyvgo6 div {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  -webkit-transform: translate(80px, 80px) scale(1);
+          transform: translate(80px, 80px) scale(1);
+  background: #ff00e5;
+  -webkit-animation: ldio-uqmmxyvgo6 2.2727272727s infinite cubic-bezier(0, 0.5, 0.5, 1);
+          animation: ldio-uqmmxyvgo6 2.2727272727s infinite cubic-bezier(0, 0.5, 0.5, 1);
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(1) {
+  background: #9714fb;
+  -webkit-transform: translate(148px, 80px) scale(1);
+          transform: translate(148px, 80px) scale(1);
+  -webkit-animation: ldio-uqmmxyvgo6-r 0.5681818182s infinite cubic-bezier(0, 0.5, 0.5, 1), ldio-uqmmxyvgo6-c 2.2727272727s infinite step-start;
+          animation: ldio-uqmmxyvgo6-r 0.5681818182s infinite cubic-bezier(0, 0.5, 0.5, 1), ldio-uqmmxyvgo6-c 2.2727272727s infinite step-start;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(2) {
+  -webkit-animation-delay: -0.5681818182s;
+          animation-delay: -0.5681818182s;
+  background: #ff00e5;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(3) {
+  -webkit-animation-delay: -1.1363636364s;
+          animation-delay: -1.1363636364s;
+  background: #9714fb;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(4) {
+  -webkit-animation-delay: -1.7045454545s;
+          animation-delay: -1.7045454545s;
+  background: #d855ff;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(5) {
+  -webkit-animation-delay: -2.2727272727s;
+          animation-delay: -2.2727272727s;
+  background: #ff00e5;
+}
+
+.loadingio-spinner-ellipsis-4u2bbxngdv {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+
+.ldio-uqmmxyvgo6 {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  -webkit-transform: translateZ(0) scale(1);
+          transform: translateZ(0) scale(1);
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transform-origin: 0 0;
+          transform-origin: 0 0;
+  /* see note above */
+}
+
+.ldio-uqmmxyvgo6 div {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
 .section {
   padding: 64px 0;
 }
@@ -45,7 +236,6 @@ body {
 
 .header {
   width: 100%;
-  position: relative;
   background: #fff;
   position: absolute;
   top: 0;
