--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,6 +39,134 @@ body {
    color: #191825;
 }
 
+.wrapper {
+   display: none;
+}
+
+.preloader {
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+   background: #fff;
+   top: 0;
+   left: 0;
+   z-index: 1000;
+}
+
+@keyframes ldio-uqmmxyvgo6 {
+   0% {
+      transform: translate(12px, 80px) scale(0);
+   }
+
+   25% {
+      transform: translate(12px, 80px) scale(0);
+   }
+
+   50% {
+      transform: translate(12px, 80px) scale(1);
+   }
+
+   75% {
+      transform: translate(80px, 80px) scale(1);
+   }
+
+   100% {
+      transform: translate(148px, 80px) scale(1);
+   }
+}
+
+@keyframes ldio-uqmmxyvgo6-r {
+   0% {
+      transform: translate(148px, 80px) scale(1);
+   }
+
+   100% {
+      transform: translate(148px, 80px) scale(0);
+   }
+}
+
+@keyframes ldio-uqmmxyvgo6-c {
+   0% {
+      background: #ff00e5
+   }
+
+   25% {
+      background: #ff00e5
+   }
+
+   50% {
+      background: #d855ff
+   }
+
+   75% {
+      background: #9714fb
+   }
+
+   100% {
+      background: #ff00e5
+   }
+}
+
+.ldio-uqmmxyvgo6 div {
+   position: absolute;
+   width: 30px;
+   height: 30px;
+   border-radius: 50%;
+   transform: translate(80px, 80px) scale(1);
+   background: #ff00e5;
+   animation: ldio-uqmmxyvgo6 2.272727272727273s infinite cubic-bezier(0, 0.5, 0.5, 1);
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(1) {
+   background: #9714fb;
+   transform: translate(148px, 80px) scale(1);
+   animation: ldio-uqmmxyvgo6-r 0.5681818181818182s infinite cubic-bezier(0, 0.5, 0.5, 1), ldio-uqmmxyvgo6-c 2.272727272727273s infinite step-start;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(2) {
+   animation-delay: -0.5681818181818182s;
+   background: #ff00e5;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(3) {
+   animation-delay: -1.1363636363636365s;
+   background: #9714fb;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(4) {
+   animation-delay: -1.7045454545454546s;
+   background: #d855ff;
+}
+
+.ldio-uqmmxyvgo6 div:nth-child(5) {
+   animation-delay: -2.272727272727273s;
+   background: #ff00e5;
+}
+
+.loadingio-spinner-ellipsis-4u2bbxngdv {
+   width: 200px;
+   height: 200px;
+   display: inline-block;
+   overflow: hidden;
+}
+
+.ldio-uqmmxyvgo6 {
+   width: 100%;
+   height: 100%;
+   position: relative;
+   transform: translateZ(0) scale(1);
+   backface-visibility: hidden;
+   transform-origin: 0 0;
+   /* see note above */
+}
+
+.ldio-uqmmxyvgo6 div {
+   box-sizing: content-box;
+}
+
 .section {
    padding: 64px 0;
 }
@@ -63,8 +191,6 @@ body {
 
 .header {
    width: 100%;
-   // padding-top: 30px;
-   position: relative;
    background: #fff;
    position: absolute;
    top: 0;
